--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>monique</title>
 </head>
 <body>
+    <header class="container">
     <img src="img/avatar-perfil.png" alt="avatar"> 
     <p>Eu sou Monique Souza</p>
+   <h1> Eu sou pretinha</h1> 
+    <p>Danço peofissionalmente</p>
+    <p>Sou boa em dar conselhos e ouvir as pessoas</p>
+    <div>
+        <P>DANÇA</P>
+        <P>FALAR BEM</P>
+        <p>LIDERANÇA</p>
+    </div>
+    </header>
 </body>
 </html>
