--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>monique</title>
 </head>
 <body>
-    <header class="container">
-    <img src="img/avatar-perfil.png" alt="avatar"> 
-    <p>Eu sou Monique Souza</p>
+    <header class="container text-center"> 
+    <img src="img/avatar-perfil.png" alt="avatar" class="rounded- circle" width="150"> 
+    <p class="lead">Eu sou Monique Souza</p>
    <h1> Eu sou pretinha</h1> 
     <p>Danço peofissionalmente</p>
     <p>Sou boa em dar conselhos e ouvir as pessoas</p>
     <div>
-        <P>DANÇA</P>
-        <P>FALAR BEM</P>
-        <p>LIDERANÇA</p>
+        <P class="badge bg-secundary">DANÇA</P>
+        <P class="badge bg-secundary">FALAR BEM</P>
+        <p class="badge bg-secundary">LIDERANÇA</p>
     </div>
     </header>
 </body>
